# godot-yaml

./: .clang-format  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  SConstruct  appveyor.yml
.github/actions/build_godot_cpp/: action.yml
.github/actions/build_ryaml/: action.yml
.github/workflows/: build.yaml
appveyor/javascript/: build_rapidyaml.ps1  install.ps1
appveyor/linux/: build_rapidyaml.ps1  install.ps1
appveyor/windows/: build_rapidyaml.ps1  init.ps1  install.ps1
demo/: Button.gd  Button.tscn  export_presets.cfg  project.godot
godot/: Cargo.toml
godot/src/: lib.rs  variant.rs
godot_yaml_rust/: Cargo.toml  build.rs
godot_yaml_rust/include/godot/: string.h  variant.h
godot_yaml_rust/src/: godot.rs  lib.rs
godot_yaml_rust/src/godot/: error.rs  string.cpp  variant.cpp  variant.rs
patches/: rapidyaml-Allow_stopping_of_parser.patch
src/: gdlibrary.cpp  godot_yaml.cpp  godot_yaml.h  godotconversions.cpp  godotconversions.h  godotyaml.cpp  godotyaml.h
